src/client/src/scss/style.scss
// Import CoreUI styles
@import "~@coreui/coreui/scss/coreui.scss";

// Custom CSS
.react-bs-table-insert-modal{
  margin-top: 20%
}

// Speaker - buttons, modal 
.add-speaker-btn{
  height: 40px;
  margin-right: 5px;
}

.delete-speaker-btn{
  height: 40px;
  margin-right: 5px;
}

.export-speaker-btn{
  height: 40px;
  margin-right: 5px; 
}

.edit-mode-btn{
  height: 40px;
  margin-right: 5px;
}

.undo-btn, .undo-btn:hover, .undo-btn:active, .undo-btn:focus, .undo-btn:visited{
  height: 40px;
  margin-right: 5px;
  color:white !important;
}

.react-bs-table-search-clear-btn{
  height: 40px;
  margin-left: 4px;
}

.speaker-modal-header{
  display: inline; 
}

// error message
.bg-danger{
  color: #e55353!important;
  background-color: #ffffff!important;
}

// tool bar
.react-bs-table-tool-bar{
  height: 60px;
}

.s-alert-box{
  margin-top: 2%;
}

// table
.duplicate-speaker-name{
  background-color: rgba(255,0,35,0.2);
}

